--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,5 @@ node_js:
   - '8'
 cache:
   yarn: true
-install:
-  - npm install -g codecov
-  - npm install -g jest
 script:
-  - jest & codecov
+  - npm run test:codecov
