--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:watch:coverage": "jest test --watch --coverage",
+    "test:codecov": "jest & codecov",
     "build": "pkg . --out-path ./build"
   },
   "homepage": "https://github.com/grikomsn/rotten-reviews",
@@ -26,6 +27,7 @@
     "commander": "^2.19.0"
   },
   "devDependencies": {
+    "codecov": "^3.1.0",
     "jest": "^23.6.0",
     "nock": "^10.0.1",
     "pkg": "^4.3.4"
